res/examples/valid/type_alias_with_existing_variable_in_closed_scope.eg
{
    let A = 123;
};

type A = number;