res/examples/invalid/let_decl_with_existing_type_alias.eg
type A = number;
let A = 456;

// out: TypeError: A is already defined